Adição de alguns testes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa-properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.datasource.data=classpath:data.sql
