--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version> <!-- Use a versão mais recente disponível -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -82,7 +88,31 @@
 					<skipTests>true</skipTests>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>3.0.0</version>
+				<executions>
+					<execution>
+						<id>init-db</id>
+						<phase>test</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>mvn</executable>
+							<arguments>
+								<argument>sql:execute</argument>
+								<argument>-Ddriver=com.mysql.jdbc.Driver</argument>
+								<argument>-Durl=jdbc:h2:mem:testdb</argument>
+								<argument>-Dusername=sa</argument>
+								<argument>-Dpassword=</argument>
+								<argument>-Dfile=src/test/resources/init-db.sql</argument>
+							</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
-
 </project>
